examples/test/testpolicy2129.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2129
  namespace: namespace180
spec:
  podSelector:
    matchLabels:
      key48: value4
      key49: value7
      key22: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value45
      podSelector:
        matchLabels:
          key6: value43
